force-app/main/default/objects/Activity/fields/CoreTwo__c.field-meta.xml
<CustomField>
    <fullName>CoreTwo__c</fullName>
    <label>CoreTwo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Coreone__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>