force-app/main/default/objects/Activity/fields/tryone__c.field-meta.xml
<CustomField>
    <fullName>tryone__c</fullName>
    <label>tryone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>