force-app/main/default/objects/Activity/fields/trythree__c.field-meta.xml
<CustomField>
    <fullName>trythree__c</fullName>
    <label>trythree</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>trytwo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>