force-app/main/default/objects/Activity/fields/trytwo__c.field-meta.xml
<CustomField>
    <fullName>trytwo__c</fullName>
    <label>trytwo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>tryone__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>